--- a/Recipe/RecipeWidget.ui
+++ b/Recipe/RecipeWidget.ui
@@ -228,6 +228,9 @@
         <property name="acceptDrops">
          <bool>true</bool>
         </property>
+        <property name="showDropIndicator" stdset="0">
+         <bool>true</bool>
+        </property>
         <property name="dragEnabled">
          <bool>true</bool>
         </property>
@@ -266,6 +269,9 @@
            <iconset resource="../Resources.qrc">
             <normaloff>:/ThreeBrooks/Recipe/up.svg</normaloff>:/ThreeBrooks/Recipe/up.svg</iconset>
           </property>
+          <property name="shortcut">
+           <string>Ctrl+Shift+Up</string>
+          </property>
          </widget>
         </item>
         <item>
@@ -277,6 +283,9 @@
            <iconset resource="../Resources.qrc">
             <normaloff>:/ThreeBrooks/Recipe/down.svg</normaloff>:/ThreeBrooks/Recipe/down.svg</iconset>
           </property>
+          <property name="shortcut">
+           <string>Ctrl+Shift+Down</string>
+          </property>
          </widget>
         </item>
         <item>
@@ -287,6 +296,9 @@
           <property name="icon">
            <iconset resource="../Resources.qrc">
             <normaloff>:/ThreeBrooks/Recipe/remove.svg</normaloff>:/ThreeBrooks/Recipe/remove.svg</iconset>
+          </property>
+          <property name="shortcut">
+           <string>Del</string>
           </property>
          </widget>
         </item>
