--- a/Recipe/RecipeWidget.ui
+++ b/Recipe/RecipeWidget.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>861</width>
-    <height>561</height>
+    <width>823</width>
+    <height>503</height>
    </rect>
   </property>
   <property name="acceptDrops">
@@ -16,9 +16,9 @@
   <property name="windowTitle">
    <string>Recipe</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_2" columnstretch="1">
+  <layout class="QGridLayout" name="gridLayout_2" rowstretch="1,3">
    <item row="0" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout">
+    <layout class="QHBoxLayout" name="horizontalLayout" stretch="3,1,1">
      <property name="spacing">
       <number>10</number>
      </property>
@@ -183,6 +183,12 @@
         </property>
         <item row="0" column="0">
          <widget class="QTableView" name="tblCalculated">
+          <property name="minimumSize">
+           <size>
+            <width>360</width>
+            <height>140</height>
+           </size>
+          </property>
           <property name="selectionMode">
            <enum>QAbstractItemView::SingleSelection</enum>
           </property>
@@ -206,9 +212,22 @@
        </layout>
       </widget>
      </item>
+     <item>
+      <spacer name="horizontalSpacer">
+       <property name="orientation">
+        <enum>Qt::Horizontal</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>40</width>
+         <height>20</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
     </layout>
    </item>
-   <item row="1" column="0">
+   <item row="1" column="0" colspan="2">
     <widget class="QGroupBox" name="grpIngredients">
      <property name="title">
       <string>Ingredients</string>
