Fixed some broken ingredients in XML file; added stuff to README; added some tooltips

--- a/Ingredient/IngredientToolbox.ui
+++ b/Ingredient/IngredientToolbox.ui
@@ -70,6 +70,9 @@
    </item>
    <item>
     <widget class="QLineEdit" name="txtFilter">
+     <property name="toolTip">
+      <string>Search the ingredient lists below</string>
+     </property>
      <property name="placeholderText">
       <string>Filter</string>
      </property>
@@ -107,7 +110,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>200</width>
+        <width>240</width>
         <height>197</height>
        </rect>
       </property>
@@ -126,7 +129,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>200</width>
+        <width>240</width>
         <height>197</height>
        </rect>
       </property>
@@ -145,7 +148,7 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>200</width>
+        <width>240</width>
         <height>197</height>
        </rect>
       </property>
