--- a/Ingredient/IngredientEditDialog.ui
+++ b/Ingredient/IngredientEditDialog.ui
@@ -82,6 +82,9 @@
       </item>
       <item row="0" column="1">
        <widget class="QDoubleSpinBox" name="spnSpecificGravity">
+        <property name="toolTip">
+         <string>Potential sugars that can be added</string>
+        </property>
         <property name="decimals">
          <number>3</number>
         </property>
@@ -108,6 +111,9 @@
       </item>
       <item row="1" column="1">
        <widget class="QDoubleSpinBox" name="spnColor">
+        <property name="toolTip">
+         <string>Color contribution</string>
+        </property>
         <property name="suffix">
          <string> SRM</string>
         </property>
@@ -131,6 +137,9 @@
       </item>
       <item row="2" column="1">
        <widget class="QCheckBox" name="chkExtract">
+        <property name="toolTip">
+         <string>If enabled, efficiency will not be factored</string>
+        </property>
         <property name="text">
          <string/>
         </property>
@@ -186,6 +195,9 @@
       </item>
       <item row="0" column="1">
        <widget class="QDoubleSpinBox" name="spnAttenuation">
+        <property name="toolTip">
+         <string>Average attenuation</string>
+        </property>
         <property name="suffix">
          <string>%</string>
         </property>
