--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -66,10 +66,19 @@
     </property>
     <addaction name="actionReloadStyleSheet"/>
    </widget>
+   <widget class="QMenu" name="menuHelp">
+    <property name="title">
+     <string>Help</string>
+    </property>
+    <addaction name="actionDocumentation"/>
+    <addaction name="separator"/>
+    <addaction name="actionAboutQt4"/>
+    <addaction name="actionAboutThreeBrooks"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuDebug"/>
+   <addaction name="menuHelp"/>
   </widget>
-  <widget class="QStatusBar" name="statusBar"/>
   <action name="actionOpenRecipe">
    <property name="icon">
     <iconset resource="Resources.qrc">
@@ -166,9 +175,6 @@
    </property>
   </action>
   <action name="actionPrint">
-   <property name="enabled">
-    <bool>false</bool>
-   </property>
    <property name="icon">
     <iconset resource="Resources.qrc">
      <normaloff>:/ThreeBrooks/Recipe/print.svg</normaloff>:/ThreeBrooks/Recipe/print.svg</iconset>
@@ -181,6 +187,27 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+P</string>
+   </property>
+  </action>
+  <action name="actionDocumentation">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>Documentation</string>
+   </property>
+  </action>
+  <action name="actionAboutQt4">
+   <property name="text">
+    <string>About Qt4...</string>
+   </property>
+  </action>
+  <action name="actionAboutThreeBrooks">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="text">
+    <string>About Three Brooks...</string>
    </property>
   </action>
  </widget>
