--- a/Ingredient/IngredientToolbox.ui
+++ b/Ingredient/IngredientToolbox.ui
@@ -1,26 +1,41 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>IngredientToolbox</class>
- <widget class="QWidget" name="IngredientToolbox">
+ <widget class="QFrame" name="IngredientToolbox">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>240</width>
+    <width>280</width>
     <height>326</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
-    <width>240</width>
+    <width>275</width>
     <height>0</height>
    </size>
+  </property>
+  <property name="frameShape">
+   <enum>QFrame::Box</enum>
+  </property>
+  <property name="lineWidth">
+   <number>0</number>
   </property>
   <layout class="QVBoxLayout" name="verticalLayout">
    <property name="spacing">
     <number>2</number>
    </property>
-   <property name="margin">
+   <property name="leftMargin">
+    <number>0</number>
+   </property>
+   <property name="topMargin">
+    <number>2</number>
+   </property>
+   <property name="rightMargin">
+    <number>0</number>
+   </property>
+   <property name="bottomMargin">
     <number>0</number>
    </property>
    <item>
@@ -78,8 +93,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>240</width>
-        <height>216</height>
+        <width>280</width>
+        <height>214</height>
        </rect>
       </property>
       <property name="dragDropMode">
@@ -97,8 +112,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>240</width>
-        <height>219</height>
+        <width>280</width>
+        <height>214</height>
        </rect>
       </property>
       <property name="dragDropMode">
@@ -116,8 +131,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>240</width>
-        <height>219</height>
+        <width>280</width>
+        <height>214</height>
        </rect>
       </property>
       <property name="dragDropMode">
@@ -135,8 +150,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>240</width>
-        <height>219</height>
+        <width>280</width>
+        <height>214</height>
        </rect>
       </property>
       <property name="dragDropMode">
