--- a/Recipe/RecipeWidget.ui
+++ b/Recipe/RecipeWidget.ui
@@ -16,9 +16,9 @@
   <property name="windowTitle">
    <string>Recipe</string>
   </property>
-  <layout class="QGridLayout" name="gridLayout_2" rowstretch="1,3">
+  <layout class="QGridLayout" name="gridLayout_2" rowstretch="1,15">
    <item row="0" column="0">
-    <layout class="QHBoxLayout" name="horizontalLayout" stretch="3,1,1">
+    <layout class="QHBoxLayout" name="horizontalLayout" stretch="3,1">
      <property name="spacing">
       <number>10</number>
      </property>
@@ -29,7 +29,7 @@
       <widget class="QGroupBox" name="grpParameters">
        <property name="maximumSize">
         <size>
-         <width>200</width>
+         <width>240</width>
          <height>16777215</height>
         </size>
        </property>
@@ -205,11 +205,11 @@
             <height>140</height>
            </size>
           </property>
+          <property name="focusPolicy">
+           <enum>Qt::NoFocus</enum>
+          </property>
           <property name="selectionMode">
            <enum>QAbstractItemView::NoSelection</enum>
-          </property>
-          <property name="selectionBehavior">
-           <enum>QAbstractItemView::SelectRows</enum>
           </property>
           <property name="gridStyle">
            <enum>Qt::DotLine</enum>
@@ -217,29 +217,10 @@
           <property name="cornerButtonEnabled">
            <bool>false</bool>
           </property>
-          <attribute name="horizontalHeaderDefaultSectionSize">
-           <number>75</number>
-          </attribute>
-          <attribute name="verticalHeaderDefaultSectionSize">
-           <number>20</number>
-          </attribute>
          </widget>
         </item>
        </layout>
       </widget>
-     </item>
-     <item>
-      <spacer name="horizontalSpacer">
-       <property name="orientation">
-        <enum>Qt::Horizontal</enum>
-       </property>
-       <property name="sizeHint" stdset="0">
-        <size>
-         <width>40</width>
-         <height>20</height>
-        </size>
-       </property>
-      </spacer>
      </item>
     </layout>
    </item>
